--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,7 @@ title: Projects
 permalink: /projects/
 weight: 1
 remote_projects:
-  - 2022Spring_Finals
+  - Courses
 ---
 
 {% include projects/index.html %}
